# onboard-erick-sousa-ia

./: .gitignore  README.md  chat_history.db  pyproject.toml  sample.env
src/: 01_langchain_introduction.py  02_langchain_chatbot.py  03_langchain_chat_history.py  03_langchain_chat_history_with_runnables.py  04_langchain_tooling.py  05_langgraph_tooling.py  06_langgraph_multi_agent.py  07_langgraph_structured_routing.py  08_langgraph_custom_memory.py  db.py  tools.py  utils.py
src/data/: brazillian_states.py  chat_history.db
src/schemas/: chat.py  graph.py  message.py
