[tool.poetry]
package-mode = false
name = "onboard-erick-sousa-ia"
version = "0.1.0"
description = "Onboarding project for AI development"
authors = ["Erick-DAS <erick.sousa@taqtile.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
python-dotenv = "1.1.1"
langchain = "0.3.27"
langchain-community = "0.3.29"
duckduckgo-search = "8.1.1"
ddgs = "9.5.5"
colorama = "0.4.6"
langgraph = "0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [".venv"]
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."
